# codewars

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  new_kata.py
.github/workflows/: linux.yml  windows.yml
complementary_dna/: CMakeLists.txt
digital_root/: CMakeLists.txt  intructions.md  main.cpp
encrypt_this/: CMakeLists.txt
katas/c/: README.md
katas/c/encrypt_this/: CMakeLists.txt  main.c
katas/c/isograms/: CMakeLists.txt  intructions.md  main.c
katas/can_you_get_the_loop/: CMakeLists.txt  intructions.md  main.cpp
katas/complementary_dna/: CMakeLists.txt  intructions.md  main.cpp
katas/convert_string_to_camel_case/: CMakeLists.txt  intructions.md  main.cpp
katas/create_phone_number/: CMakeLists.txt  intructions.md  main.c  main.cpp
katas/cxx/: README.md
katas/cxx/can_you_get_the_loop/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/complementary_dna/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/convert_string_to_camel_case/: CMakeLists.txt  main.cpp
katas/cxx/create_phone_number/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/digital_root/: CMakeLists.txt  main.cpp
katas/cxx/encrypt_this_cxx/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/hamming_numbers/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/matrix_determinant/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/multiples_of_3_or_5/: CMakeLists.txt  main.cpp
katas/cxx/range_extraction/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/roman_numerals_helper/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/split_strings/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/unique_in_order/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/valid_braces/: CMakeLists.txt  intructions.md  main.cpp
katas/cxx/vasya_clerk/: CMakeLists.txt  main.cpp
katas/digital_root/: CMakeLists.txt  intructions.md  main.cpp
katas/encrypt_this/: CMakeLists.txt  intructions.md  main.c  main.cpp
katas/isograms/: CMakeLists.txt  intructions.md  main.c
katas/multiples_of_3_or_5/: CMakeLists.txt  intructions.md  main.cpp
katas/roman-numerals-helper/: CMakeLists.txt  intructions.md  main.cpp
katas/split_strings/: CMakeLists.txt  intructions.md  main.cpp
katas/unique_in_order/: CMakeLists.txt  intructions.md  main.cpp
katas/valid_braces/: CMakeLists.txt  intructions.md  main.cpp
katas/vasya-clerk/: CMakeLists.txt  intructions.md  main.cpp
libs/: README.md
multiples_of_3_or_5/: CMakeLists.txt  intructions.md
unique_in_order/: main.cpp
vasya-clerk/: main.cpp
